--- a/services/mqtt-eventbus.cfg
+++ b/services/mqtt-eventbus.cfg
@@ -3,7 +3,7 @@ broker=broker
 
 # When available, all status updates which occur on the openHAB event bus are published to the provided topic. The message content will 
 # be the status. The variable ${item} will be replaced during publishing with the item name for which the state was received.
-statePublishTopic=kolcun/indoor/openhab/out/${item}state
+statePublishTopic=kolcun/indoor/openhab/out/${item}/state
 
 # When available, all commands which occur on the openHAB event bus are published to the provided topic. The message content will be the 
 # command. The variable ${item} will be replaced during publishing with the item name for which the command was received.
