--- a/services/mapdb.cfg
+++ b/services/mapdb.cfg
@@ -2,4 +2,4 @@
 commitinterval=5
 
 # issue a commit even if the state did not change (optional, defaults to 'false')
-commitsamestate=false
+commitsamestate=true
