enable plm insteon control update sitemap to reflect updated item names

--- a/services/insteonplm.cfg
+++ b/services/insteonplm.cfg
@@ -8,7 +8,7 @@
 # port_0=/dev/ttyUSB0  (Linux, with usb based PLM modem)
 # port_0=COM1	  (Windows, with serial/usb modem on COM1)
 
-#port_0=/dev/ttyUSB0
+port_0=/dev/ttyUSB0
 
 #
 # to connect to an Insteon Hub2 (the 2014 version) on port 25105, with
