new sitemap for testing zwave

--- a/services/addons.cfg
+++ b/services/addons.cfg
@@ -28,23 +28,23 @@
 #
 #legacy = true
 
-# A comma-separated list of bindings to install (e.g. "sonos,knx,zwave")
+# A comma-separated list of bindings to install (e.g. "binding = sonos,knx,zwave")
 #binding = 
 
-# A comma-separated list of UIs to install (e.g. "basic,paper")
+# A comma-separated list of UIs to install (e.g. "ui = basic,paper")
 #ui = 
 
-# A comma-separated list of persistence services to install (e.g. "rrd4j,jpa")
+# A comma-separated list of persistence services to install (e.g. "persistence = rrd4j,jpa")
 #persistence = 
 
-# A comma-separated list of actions to install (e.g. "mail,pushover")
+# A comma-separated list of actions to install (e.g. "action = mail,pushover")
 #action = 
 
-# A comma-separated list of transformation services to install (e.g. "map,jsonpath")
+# A comma-separated list of transformation services to install (e.g. "transformation = map,jsonpath")
 #transformation = 
 
-# A comma-separated list of voice services to install (e.g. "marytts,freetts")
+# A comma-separated list of voice services to install (e.g. "voice = marytts,freetts")
 #voice = 
 
-# A comma-separated list of miscellaneous services to install (e.g. "myopenhab")
+# A comma-separated list of miscellaneous services to install (e.g. "misc = myopenhab")
 #misc = 
