updated to latest snapshot added pool SWG added amazon echo

--- a/services/addons.cfg
+++ b/services/addons.cfg
@@ -12,7 +12,7 @@
 #   - expert   : Setup for expert users, especially for people migrating from openHAB 1.x
 #   - demo     : A demo setup which includes UIs, a few bindings, config files etc.
 #
-# See http://docs.openhab.org/configuration/packages.html for a detailed explanation of these packages.
+# See https://www.openhab.org/docs/configuration/packages.html for a detailed explanation of these packages.
 #
 #package = minimal
 
