--- a/services/runtime.cfg
+++ b/services/runtime.cfg
@@ -56,7 +56,7 @@
 #
 # !!! Security warning !!!
 #   Remember to change default login/password, if you allow external login.
-#   See http://docs.openhab.org/administration/console.html for details.
+#   See https://www.openhab.org/docs/administration/console.html for details.
 #
 #org.apache.karaf.shell:sshHost = 0.0.0.0
 
