--- a/services/pushover.cfg
+++ b/services/pushover.cfg
@@ -16,7 +16,7 @@ defaultTitle=openHAB
 # The priority to use for messages if not specified otherwise. Can range from
 # -2 (lowest) to 2 (highest)
 defaultPriority=0
-
+defaultDevice=mike-iphone-5s
 # Url to attach to the message if not specified in the command (optional). Can be left empty.
 #defaultUrl=
 
